--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/global.css" />
     <title>Document</title>
   </head>
   <body>
-    <h1>HELLO WORLD</h1>
+    <h1>hello world</h1>
   </body>
 </html>
