--- a/index.html
+++ b/index.html
@@ -7,6 +7,37 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>hello world</h1>
+    <header>
+      <div class="header_container">
+        <div class="header_content">
+          <div class="logo">
+            <a href="">
+              <img
+                class="logo_img"
+                src="assets/svg/header/audiophile.svg"
+                alt="logo"
+              />
+            </a>
+          </div>
+          <div class="navigation">
+            <nav>
+              <ul>
+                <li><a href="">HOME</a></li>
+                <li><a href="">PRODUCTS</a></li>
+                <li><a href="">FEEDBACK</a></li>
+                <li><a href="">SALES</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div>
+            <div class="cart">
+              <a href="">
+                <img src="assets/svg/header/Combined_Shape.svg" alt="cart" />
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
   </body>
 </html>
